2001-05-23  Larry Jones  <larry.jones@sdrc.com>

	* checkout.c (checkout_proc): Don't build top_level_admin directory
	when exporting.
	(Reported by Tony Byrne <tonyb@directski.com>.)

2001-05-21  Derek Price  <dprice@collab.net>

	* client.c: Fix a mispelling in a comment.
	(Patch from Alexey Mahotkin <alexm@hsys.msk.ru>).

2001-05-05  Larry Jones  <larry.jones@sdrc.com>

	* login.c (password_entry_operation): Only warn if unable to open
	.cvspass for reading: may be initial login and it doesn't exist yet.

2001-05-15  Derek Price  <dprice@collab.net>

	* client.c (start_tcp_server): Use the struct sockaddr_in declared in
	the function.
	(Reported by Emil Isberg <isberg@dynarc.se>.)

2001-05-05  Larry Jones  <larry.jones@sdrc.com>

	* annotate.c (annotate): Pass local to do_module and rannotate_proc
	so that -l actually works.
	* log.c (cvslog): Ditto.
	* patch.c (patch): Ditto; make local local instead of global.
	(patch_proc): Use local_specified parameter instead of global.
	* tag.c (cvstag, rtag_proc): Ditto.

2001-05-05  Larry Jones  <larry.jones@sdrc.com>

	* client.h: Declare "struct buffer" outside prototype for __STDC__
	compilers.

2001-05-04  Derek Price  <dprice@collab.net>

	* client.c:  General refactoring.  Removed several global variables in
	favor of passing locals and/or dynamic evaluation.
	(recv_line): Removed this function.
	(make_bufs_from_fds): New function with factored code.
	(connect_to_forked_server): New prototype.  Use new functions.
	(connect_to_pserver): New prototype.  Use new functions.
	(connect_to_gserver): New prototype.  Use new API.
	(auth_server): Factored this portion of the pserver code so it can be
	shared.  Rewrote to use buffers rather than depending on a socket.
	(start_rsh_server): New prototype.  Use new API.
	(start_tcp_server): New prototype.  Use new API.
	(start_server): Factor some code.  Use new API.
	* client.h: New prototypes.
	* cvs.h: Gratuitous reformatting.  Use new root.h.